issueからentitlement_id必須を除外
